# tjvox

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  PACKAGING.md  README.md  install.sh  tjvox.spec
config/: config.example.toml
pkg/usr/share/applications/: tjvox.desktop
src/: audio.rs  config.rs  daemon.rs  error.rs  history.rs  input.rs  layer_shell.rs  lib.rs  llm.rs  main.rs  messages.rs  output.rs  ptt.rs  replacements.rs  socket.rs  transcription.rs  ui.rs
src/gui/: mod.rs  overlay.rs  tray.rs
